# rs_engine_webgpu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  debug_commands.txt  imgui.ini  package-lock.json  package.json  run_native.sh  run_web.sh  start_https_server.py
.claude/agents/: webgpu-cross-platform-advisor.md
apps/fluid_demo/: CMakeLists.txt  FluidDemoApp.cpp  FluidDemoApp.h  index.html  main.cpp
apps/viewer/: CMakeLists.txt  SeobJJangApp.cpp  SeobJJangApp.h  TriangleApp.h  index.html  main.cpp  main_native.cpp  main_web.cpp  viewer.js
build_web/apps/viewer/: index.html  viewer.html  viewer.js  viewer.wasm  viewer_web.js  viewer_web.wasm
engine/: CMakeLists.txt
engine/core/: Application.cpp  Application.h  ApplicationSystem.cpp  ApplicationSystem.h  Config.h  Engine.cpp  Engine.h  IEngineSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h
engine/core/math/: Mat4.h  Quat.h  Ray.h  Vec3.h
engine/gui/: ImGuiManager.cpp  ImGuiManager.h
engine/physics/: PhysicsWorld.h
engine/physics/cloth/: PBDCloth.h
engine/physics/fluid/: SPHSimulation.h
engine/platform/: NativeApplication.cpp  NativeApplication.h  WebApplication.cpp  WebApplication.h
engine/rendering/: CubeRenderer.cpp  CubeRenderer.h  ShaderManager.cpp  ShaderManager.h  WebGPURenderer.h
engine/rendering/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
engine/resource/: ResourceManager.cpp  ResourceManager.h  ResourceTypes.h
engine/resource/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
engine/resource/texture/: Texture.cpp  Texture.h
engine/systems/application/: ApplicationSystem.cpp  ApplicationSystem.h  README.md
engine/systems/input/: CameraController.cpp  CameraController.h  InputSystem.cpp  InputSystem.h
engine/systems/physics/: PhysicsSystem.cpp  PhysicsSystem.h
engine/systems/rendering/: RenderSystem.cpp  RenderSystem.h
engine/systems/resource/: ResourceSystem.cpp  ResourceSystem.h
scripts/: dev-server.py  dev.sh  embed_shaders.py  kill-port.sh
shaders/common/: types.wgsl
shaders/compute/cloth/: pbd_constraints.wgsl
shaders/compute/fluid/: sph_density.wgsl
shaders/render/: cube_fragment.wgsl  cube_vertex.wgsl  line_fragment.wgsl  line_vertex.wgsl
